More examples and fixes to examples. And upgrading to Java 21